--- a/CFM/app/src/main/AndroidManifest.xml
+++ b/CFM/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.cf">
-
+    package="com.example.cf" >
     <!-- Permissão para acesso à internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,10 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CF"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".Chat"
+            android:exported="false" />
         <activity
             android:name=".TelaCPF"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
