--- a/CFM/app/src/main/AndroidManifest.xml
+++ b/CFM/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31" >
         <activity
             android:name=".Chat"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".TelaCPF"
             android:exported="true" >
