--- a/CFM/app/src/main/AndroidManifest.xml
+++ b/CFM/app/src/main/AndroidManifest.xml
@@ -29,6 +29,14 @@
             android:name=".Chat"
             android:exported="false"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity android:name=".TelaFisica"
+            android:exported="false"/>
+        <activity android:name=".TelaNeurodivergentes"
+            android:exported="false"/>
+        <activity android:name=".TelaSensorial"
+            android:exported="false"/>
+        <activity android:name=".TelaIntelectual"
+            android:exported="false"/>
         <activity
             android:name=".TelaInicial"
             android:exported="true">
