--- a/CFM/app/src/main/AndroidManifest.xml
+++ b/CFM/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.CF"
         tools:targetApi="31">
         <activity
+            android:name=".CadastroActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChatBot"
             android:exported="false"
             android:windowSoftInputMode="adjustPan|stateHidden" />
@@ -29,14 +32,18 @@
             android:name=".Chat"
             android:exported="false"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity android:name=".TelaFisica"
-            android:exported="false"/>
-        <activity android:name=".TelaNeurodivergentes"
-            android:exported="false"/>
-        <activity android:name=".TelaSensorial"
-            android:exported="false"/>
-        <activity android:name=".TelaIntelectual"
-            android:exported="false"/>
+        <activity
+            android:name=".TelaFisica"
+            android:exported="false" />
+        <activity
+            android:name=".TelaNeurodivergentes"
+            android:exported="false" />
+        <activity
+            android:name=".TelaSensorial"
+            android:exported="false" />
+        <activity
+            android:name=".TelaIntelectual"
+            android:exported="false" />
         <activity
             android:name=".TelaInicial"
             android:exported="true">
